# fitmanager

./: .gitignore  pyproject.toml
.github/workflows/: book.yml
src/: book.py  config.py
src/tests/: test_book.py
